Kubernetes-first/148 Network Policy/test.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internal-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      name: internal
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - {}
  egress:
    - to:
      - podSelector:
          matchLabels:
            name: mysql
      ports:
      - port: 3306
        protocol: TCP
    - to:
      - podSelector:
          matchLabels:
            name: payroll
      ports:
      - port: 8080
        protocol: TCP
    - ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: UDP






  # Policy Name: internal-policy
  # Policy Types: Egress
  # Egress Allow: payroll
  # Payroll Port: 8080
  # Egress Allow: mysql
  # MYSQL Port: 3306
